--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,29 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Vorota</title>
+  <title>VorotaPROM - автоматические гаражные, откатные, и ролетные ворота, автоматика для ворот, Киев, Киевская область, Ивано-Франковск,
+    Ивано-франковская область, Косов</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- скрипт google start -->
+  <script>
+    (function (i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r;
+      i[r] = i[r] || function () {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date();
+      a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+      a.async = 1;
+      a.src = g;
+      m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-73895318-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
+  <!-- скрипт google end -->
 </head>
 
 <body>
