--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,9 @@
 
 <head>
   <meta charset="utf-8">
-  <title>VorotaPROM - автоматические гаражные, откатные, и ролетные ворота, автоматика для ворот, Киев, Киевская область, Ивано-Франковск,
-    Ивано-франковская область, Косов</title>
+  <meta name="title" content="title">
+  <meta name="description" content="description">
+  <meta name="keywords" content="keywords">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- скрипт google start -->
