ver 1.0.8 add footer and fix

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,11 @@
 </head>
 
 <body>
-  <app-root>Loading...</app-root>
+  <app-root>
+    <div style="width: 256px; height: 256px; margin: 100px auto;">
+      <img src="./assets/img/icon/lg.double-ring-spinner.gif" style="width: 100%;">
+    </div>
+  </app-root>
 </body>
 
 </html>
