--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="description">
   <meta name="keywords" content="keywords">
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=320, initial-scale=1">
   <!-- скрипт google start -->
   <script>
     (function (i, s, o, g, r, a, m) {
